--- a/Figures/Figures.csproj
+++ b/Figures/Figures.csproj
@@ -43,11 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TwoDimensional\RegularPolygon.cs" />
+    <Compile Include="IVisitor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoDimensional\Pentagon.cs" />
+    <Compile Include="TwoDimensional\Rectangle.cs" />
+    <Compile Include="TwoDimensional\Triangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Visitors\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
